<resources>
    <string name="app_name">物联网</string>
    <string name="strSet">设置</string>
    <string name="strTemp">温度范围</string>
    <string name="strOr">至</string>
    <string name="strHumi">湿度范围</string>
    <string name="strLight">光照强度</string>
    <string name="strCO">CO</string>
    <string name="strSave">保存</string>
    <string name="strChean">重置</string>
    <string name="strClose">读取</string>
    <string name="str_Login">登录</string>
    <string name="str_Register">注册</string>
</resources>
