<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colortitle"
        android:gravity="center"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/texrView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/colorwhite"
            android:text="@string/strSet" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        >
        <TextView
            android:id="@+id/textView2"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.8"
            android:gravity="center"
            android:text="@string/strTemp"
            />
        <EditText
            android:id="@+id/edTemp1"
            android:layout_weight="6"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:ems="8"
            />
        <TextView
            android:id="@+id/textView3"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/strOr"
            />
        <EditText
            android:id="@+id/edTemp2"
            android:layout_weight="6"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        >
        <TextView
            android:id="@+id/textView4"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/strLight"
            />
        <EditText
            android:id="@+id/edHumi"
            android:layout_weight="6"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            />
        <LinearLayout
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:layout_marginRight="50dip">
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        >
        <TextView
            android:id="@+id/textView5"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/strHumi"
            />
        <EditText
            android:id="@+id/edLight"
            android:layout_weight="6"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            />
        <LinearLayout
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:layout_marginRight="50dip">
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        >
        <TextView
            android:id="@+id/textView6"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/strCO"
            />
        <EditText
            android:id="@+id/edCo"
            android:layout_weight="6"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            />
        <LinearLayout
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:layout_marginRight="50dip">
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dip">
        <Button
            android:id="@+id/btSave"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/strSave"
            />
        <Button
            android:id="@+id/btClear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/strChean"
            />
        <Button
            android:id="@+id/btRead"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/strClose"
            />
    </LinearLayout>
</LinearLayout>